using Ctrl+a in book field resets typed variable Entering help pane ensures scroll is at the top Fixed overflow issues

--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
 #app {
     display: grid;
     grid-template-rows: [top-start] auto [content-start] 1fr [content-end] auto [top-end];
-    min-height: 100vh;
+    height: 90vh;
     width: 85%;
     margin: 10px auto;
 }
